--- a/UPLS_MainControllerFirmware/platformio.ini
+++ b/UPLS_MainControllerFirmware/platformio.ini
@@ -17,4 +17,4 @@ monitor_speed = 38400
 
 upload_protocol = stlink
 
-build_flags = -I$PROJECT_DIR/../shared
+build_flags = -I$PROJECT_DIR/../shared -D __MAIN_CONTROLLER
