--- a/UPLS_Py/.vscode/tasks.json
+++ b/UPLS_Py/.vscode/tasks.json
@@ -4,19 +4,24 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "build",
+			"label": "Build",
 			"type": "shell",
 			"command": "make",
 			"args": [
 				"all"
-			]
+			],
+			"problemMatcher": [],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		},
 		{
-			"label": "clean",
+			"label": "Generate documentation",
 			"type": "shell",
-			"command": "make",
+			"command": "doxygen",
 			"args": [
-				"clean"
+				"Doxyfile"
 			]
 		}
 	]
