Extruder callibration and integration.

--- a/UPLS_MainControllerFirmware/platformio.ini
+++ b/UPLS_MainControllerFirmware/platformio.ini
@@ -14,5 +14,10 @@ board = genericSTM32F103C8
 framework = mbed
 monitor_speed = 115200
 upload_protocol = stlink
-build_flags = -I$PROJECT_DIR/../shared -D __MAIN_CONTROLLER
+build_flags = 
+	-I$PROJECT_DIR/../shared 
+	-D __MAIN_CONTROLLER
+;	-save-temps=obj
+;	-fverbose-asm
+
 debug_tool = stlink
